# bulk-qr-maker

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
