[tool.poetry]
name = "qr-maker"
version = "0.1.0"
description = ""
authors = ["Grant Johnson <grant.johnson@cloudresponse.co.uk>"]
readme = "README.md"
packages = [{include = "qr_maker"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
qrcode = {extras = ["pil"], version = "^7.4.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

